--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,7 +19,8 @@ header > form > input,
 button {
   border: 0.05em #00adb5 solid;
   border-radius: 0.15em;
-  font-size: large;
+  font-size: medium;
+  text-transform: lowercase;
 }
 header > form > input {
   background-color: #ececec;
@@ -41,7 +42,9 @@ main {
   height: 82vh;
   background-color: #ffffff;
   display: grid;
-  grid-template-columns: 4fr 6fr;
+  grid-template-columns: 1fr 4fr;
+  padding: 0;
+  margin: 0;
 }
 .movies-list {
   background-color: #f0f0f0;
@@ -50,13 +53,15 @@ main {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  width: 100%;
 }
 .movie-description {
+  padding: 1px;
+  margin: 0;
   background-color: #ffffff;
 }
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
   border-radius: 0.5em;
   padding: 1em;
   margin: 1em;
@@ -86,84 +91,171 @@ main {
   margin-top: 0.25em;
 }
 .short-info > img {
-  border-radius: .5em;
+  border-radius: 0.5em;
 }
 .short-overview {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   width: 10em;
-  margin: .25em 0 0 0;
+  margin: 0.25em 0 0 0;
   color: #727272;
 }
-.movie-description{
+.movie-description {
   padding-top: 2em;
   padding-right: 1em;
 }
-.backdrop{
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+}
+.backdrop {
   width: 100%;
   height: auto;
-  border-radius: .5em;
+  border-radius: 0.5em;
 }
-.poster{
+.poster {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
 }
-.poster-image{
+.poster-image {
   width: 50%;
   height: auto;
-  border-radius: .5em;
+  border-radius: 0.5em;
 }
 .poster > div {
   padding: 1em;
 }
-.title{
+.title {
   font-size: large;
   font-weight: bold;
   margin: 0em;
+  padding-left: .25em;
 }
-.rating{
+.rating {
   font-size: medium;
+  vertical-align: super;
 }
-.info{
+.info {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
 }
-.descriptor{
+.descriptor {
   color: #727272;
 }
-.genres{
+.genres {
   font-size: small;
   font-weight: bold;
-  margin: .5em 0 0 0;
+  margin: 0.5em 0 0 0;
 }
-.spoken-languages, .release-date, .status{
+.runtime {
+  font-size: small;
+  font-weight: bold;
+  margin: 0;
+}
+.spoken-languages,
+.release-date,
+.status,
+.adult {
   font-size: small;
   font-weight: 500;
   margin: 0;
 }
-.external{
+.external {
   padding-top: 1em;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 }
-.imdb{
+.imdb {
   text-decoration: none;
 }
-.more-info{
+.more-info {
   text-decoration: none;
   color: #065fb3;
   font-size: medium;
   font-weight: lighter;
+  padding-left: 1em;
 }
-.overview{
+.overview {
   font-size: small;
+}
+.budget {
+  font-size: small;
+  font-weight: 700;
+}
+.credits > h2 {
+  margin: 0;
+}
+.credits,
+.similar {
+  margin: 0;
+  width: 100%;
+}
+.cast,
+.crew,
+.similar-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  overflow-x: auto;
+  justify-content: flex-start;
+  align-items: center;
+}
+.credits,
+.similar > h2 {
+  font-size: large;
+  font-weight: bold;
+}
+.profile {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 1em;
+  background-color: white;
+  padding: 0 0.25em;
+  width: 6em;
+  height: 13em;
+}
+.similar-movie {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 1em;
+  background-color: white;
+  padding: 0 0.25em;
+  width: 14em;
+  height: 28em;
+  cursor: pointer;
+}
+.profile-picture,
+.similar-poster {
+  width: 100%;
+  height: auto;
+  border-radius: 0.5em;
+  padding-top: 0.5em;
+}
+.name,
+.character,
+.job {
+  margin: 0;
+  font-size: small;
+  font-weight: 500;
+  text-align: center;
+}
+.similar-title {
+  margin: 0;
+  font-size: medium;
+  font-weight: bold;
+  text-align: center;
+}
+.character,
+.job {
+  color: #727272;
 }
 @media screen and (min-width: 480px) {
   header {
@@ -191,16 +283,44 @@ main {
   }
   .short-overview {
     font-size: small;
-    width: 25em;
+    width: 30em;
   }
-  .poster-image{
+  .external {
+    justify-content: flex-start;
+  }
+  .content {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+  }
+  .backdrop {
+    width: 100%;
+    height: 25rem;
+    object-fit: cover;
+  }
+  .poster-image {
     width: auto;
     height: auto;
   }
-  .title{
+  .title {
     font-size: 2rem;
   }
-  .genres, .spoken-languages, .release-date, .status{
-    font-size: large;
+  .genres,
+  .runtime,
+  .spoken-languages,
+  .release-date,
+  .status,
+  .adult {
+    font-size: medium;
+    padding-right: 5em;
+  }
+  .profile {
+    width: 6em;
+    height: 14em;
+  }
+  .similar-movie {
+    width: 14em;
+    height: 30em;
   }
 }
