--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1>TraxSmart Movie Library</h1>
+  <h1>TraxSmart Movie Database</h1>
   <form #searchForm="ngForm" (ngSubmit)="fetchMovies(searchForm)" autocomplete="off">
     <input type="text" placeholder="Search Movies ..." required ngModel name=movieName #movieName="ngModel">
     <button>Search</button>
