--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,3 +87,6 @@
     </div>
   </section>
 </main>
+<footer>
+  <p style="text-align: end; padding-right: 5em;">Copyright Suman Mitra 2020</p>
+</footer>
